
- PR#7411: ocamldoc, avoid nested <pre> tags in module description.
  (Florian Angeletti, report by user 'kosik')

- PR#7488: ocamldoc, wrong Latex output for variant types
  with constructors without arguments.
  (Florian Angeletti, report by Xavier Leroy)

### Bug fixes

- PR#7369: Str.regexp raises "Invalid_argument: index out of bounds"
  (Damien Doligez, report by John Whitington)

- PR#7385, GPR#1057: fix incorrect timestamps returned by Unix.stat on Windows
  when either TZ is set or system date is in DST.
  (David Allsopp, report and initial fix by Nicolás Ojeda Bär, review and
   superior implementation suggestion by Xavier Leroy)

- PR#7405, GPR#903: s390x: Fix address of caml_raise_exn in native dynlink modules
  (Richard Jones, review by Xavier Leroy)

- MPR#7417, GPR#930: ensure 16 byte stack alignment inside caml_allocN on x86-64
  for ocaml build with WITH_FRAME_POINTERS defined
  (Christoph Cullmann)

- PR#7457: a case of double free in the systhreads library (POSIX implementation)
  (Xavier Leroy, report by Chet Murthy)

- PR#7460, GPR#1011: catch uncaught exception when unknown files are passed
  as argument (regression in 4.04.0)
  (Bernhard Schommer, review by Florian Angeletti and Gabriel Scherer,
   report by Stephen Dolan)

- PR#7505: Memory cannot be released after calling
    Bigarray.Genarray.change_layout.
  (Damien Doligez and Xavier Leroy, report by Liang Wang)

- GPR#912: Fix segfault in Unix.create_process on Windows caused by wrong header
  configuration.
  (David Allsopp)

- GPR#980: add dynlink options to ocamlbytecomp.cmxa to allow ocamlopt.opt
  to load plugins. See http://github.com/OCamlPro/ocamlc-plugins for examples.
  (Fabrice Le Fessant, review by David Allsopp)

- GPR#992: caml-types.el: Fix missing format argument, so that it can show kind
  of call at point correctly.
  (Chunhui He)

- GPR#1043: Allow Windows CRLF line-endings in ocamlyacc on Unix and Cygwin.
  (David Allsopp, review by Damien Doligez and Xavier Leroy)
