@@ -29,7 +29,9 @@ let init_path ?(dir="") native =
     else
       !Clflags.include_dirs
   in
-  let dirs = !last_include_dirs @ dirs @ !first_include_dirs in
+  let dirs =
+    !last_include_dirs @ dirs @ Config.flexdll_dirs @ !first_include_dirs
+  in
   let exp_dirs =
     List.map (Misc.expand_directory Config.standard_library) dirs in
   Config.load_path := dir ::
